Fixed letter spacing on x axis on mobile

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -585,6 +585,9 @@ svg.chart-canvas {
       }
 
       &.x {
+        text {
+          letter-spacing: 0;
+        }
         path {
           stroke: $color-0;
           stroke-opacity: 0.24;
